--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 2010年兄弟象隊達成了隊史千勝紀錄，為中職至今唯二達成的球隊。2010年兄弟象隊於下半季取得隊史第11座季冠軍，<br>
 同年總冠軍賽以四連勝橫掃興農牛隊，奪下隊史第七座總冠軍。<p><hr>
 
-<img src="image\001.jpg" height=600 width=640><p>
-<img src="image\002.jpg" height=240 width=320>
-<img src="image\003.jpg" height=240 width=320>
+<img src="image\001.jpg.jpg" height=600 width=640><p>
+<img src="image\002.jpg.jpg" height=240 width=320>
+<img src="image\003.jpg.jpg" height=240 width=320>
 </body>
 </html>
